Closed
Bug 1797982
Opened 2 years ago
Closed 2 years ago
Baseline for Scrollable Div offset by Its Padding
Categories
(Core :: Layout: Block and Inline, defect)
Core
Layout: Block and Inline
Tracking
()
VERIFIED
FIXED
108 Branch
People
(Reporter: dshin, Assigned: dshin)
References
Details
Attachments
(2 files)
STR: Load attached use case
Expected: Cyan squares aligned to their baselines, where the pair of squares touch
Actual: The pair of cyan squares to the left offset by the block padding of .inner div. This does not occur if .inner div does not have scroll
or hidden
overflow
set.
Assignee | ||
Updated•2 years ago
|
Assignee: nobody → dshin
Status: NEW → ASSIGNED
Assignee | ||
Comment 1•2 years ago
|
||
Assignee | ||
Updated•2 years ago
|
Severity: -- → S3
Pushed by dshin@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2620b3a575e8
Avoid double counting padding when getting first baseline of scroll containers. r=emilio
![]() |
||
Comment 3•2 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox108:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
Updated•2 years ago
|
QA Whiteboard: [qa-108b-p2]
Reproducible on a 2022-10-28 Nightly build on macOS 12. Verified as fixed on Firefox 108.0b2(build ID: 20221115200658) and Nightly 109.0a1(build ID: 20221115214157) on macOS 12, Ubuntu 22, Windows 10.
You need to log in
before you can comment on or make changes to this bug.
Description
•