Bug 1797982 - Avoid double counting padding when getting first baseline of scroll containers. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D160667